--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "cypress run"
+    "test:e2e": "cypress run",
+    "test:integration": "vue-cli-service test:unit --testMatch '**/tests/integration/**/*.spec.[jt]s?(x)'"
   },
   "dependencies": {
     "axios": "^1.6.8",
@@ -24,7 +25,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-unit-jest": "^5.0.8",
     "@vue/cli-service": "~5.0.0",
-    "@vue/test-utils": "^2.4.0-alpha.2",
+    "@vue/test-utils": "^2.4.6",
     "@vue/vue3-jest": "^29.2.6",
     "babel-jest": "^29.7.0",
     "cypress": "^13.9.0",
